<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.salesianos.jose.intencionesimplicitas.Principal">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton1"
        android:id="@+id/boton1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="callIntent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton2"
        android:id="@+id/boton2"
        android:layout_gravity="center_horizontal"
        android:onClick="callIntent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton3"
        android:id="@+id/boton3"
        android:layout_gravity="center_horizontal"
        android:onClick="callIntent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton4"
        android:id="@+id/boton4"
        android:layout_gravity="center_horizontal"
        android:onClick="callIntent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton5"
        android:id="@+id/boton5"
        android:layout_gravity="center_horizontal"
        android:onClick="callIntent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton6"
        android:id="@+id/boton6"
        android:layout_gravity="center_horizontal"
        android:onClick="callIntent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton7"
        android:id="@+id/boton7"
        android:layout_gravity="center_horizontal"
        android:onClick="callIntent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton8"
        android:id="@+id/boton8"
        android:layout_gravity="center_horizontal"
        android:onClick="callIntent" />

</LinearLayout>